<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_STRUCT" Id="{cea71d71-b43c-421e-99ad-afada4623031}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

END_VAR

TYPE 
ST_DriveRef 	:
STRUCT
	
	sNetId		: T_AmsNetId;
	nSlaveAddr	: UINT	:= GVL_VAR.uiSlaveAddr;
	nDriveNo 	: BYTE	:= GVL_VAR.nDriveNum;
	nDriveType	: BYTE	:= GVL_VAR.nDriveType;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </GVL>
</TcPlcObject>